Added the java option to opensilex.sh