@@ -4,4 +4,4 @@ SCRIPT_DIR="$(dirname "$(readlink -f "$0")")"
 
 cd $SCRIPT_DIR
 
-java -jar opensilex.jar "$@"
+java -jar --add-opens java.base/java.io=ALL-UNNAMED opensilex.jar "$@"
